humaneval_turbo_plus_probe_run2_1.log
Traceback (most recent call last):
  File "C:\Users\chenzaiyi\MapCoder\MapCoder\src\main.py", line 10, in <module>
    from promptings.PromptingFactory import PromptingFactory
  File "C:\Users\chenzaiyi\MapCoder\MapCoder\src\promptings\PromptingFactory.py", line 6, in <module>
    from promptings.MapCoder import MapCoder as MapCoder
  File "C:\Users\chenzaiyi\MapCoder\MapCoder\src\promptings\MapCoder.py", line 312
    if isinstance(self.data, MBPPDataset):
    ^^
IndentationError: expected an indented block after 'try' statement on line 311
